# ic-search

./: .gitignore  Cargo.toml  INSTALL.md  README.md  STAKING_GUIDE.md  canister_ids.json  dfx.json  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/search/: Cargo.toml  build.sh
src/search/src/: deposit.rs  init.rs  lib.rs  manage.rs  search.did  search.rs  stake.rs
src/search_assets/assets/: _variables.scss  main.css  main.scss
src/search_assets/src/: index.html  index.js  index.jsx
src/search_assets/src/components/: AddCyclesForm.jsx  AddWebsiteForm.jsx  Navigation.jsx  ResultsDisplay.jsx  Search.jsx  WebsiteDisplay.jsx  WebsiteList.jsx
src/search_assets/src/config/: routes.jsx
src/search_assets/src/pages/: Dashboard.jsx  Landing.jsx
